JUNIT 5 approach -fix issues with filters, added some missing assertinos to the tests